--- a/egov/egov-auditweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-auditweb/src/main/resources/messages/labels.properties
@@ -82,6 +82,7 @@ lbl.voucher=Bill Voucher Number
 lbl.payment.voucher=Payment Voucher Number
 lbl.audit.dateFrom=Audit Date From
 lbl.audit.dateTo=Audit Date To
+lbl.department=Department
 
 
 
