Finance Issue Fixes

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
@@ -367,3 +367,4 @@ msg.please.select.approver.designation=Please select the approver designation
 msg.please.select.approver=Please Select the Approver
 msg.please.enter.voucher.narration=Please enter Narration
 msg.please.select.voucher.narration=Please enter narration
+lbl.pending.with=Pending With
