--- a/egov/egov-egfweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/labels.properties
@@ -546,4 +546,4 @@ title.approvebudget.search.cao=Verify Uploaded Budget
 title.approvebudget.search.acmc=Verify Uploaded Budget
 lbl.bill.sanction.number=Sanction Number
 lbl.bill.sanction.date=Sanction Date
-
+lbl.view.documents=Documents
