--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -389,5 +389,5 @@ pex.transaction.success=Processing done successfully
 msg.please.select.voucher.narration=Please enter narration
 msg.payment.narration.mandatory=Narration is mandatory
 
-
+bank.onlinelink=Online Link
 
