--- a/egov/egov-ear/pom.xml
+++ b/egov/egov-ear/pom.xml
@@ -88,6 +88,11 @@
         </dependency>        
         <dependency>
             <groupId>org.egov</groupId>
+	     <artifactId>egov-auditweb</artifactId>
+            <version>${project.parent.version}</version>
+            <type>war</type>
+        </dependency>
+	    <dependency>
             <artifactId>egov-lcmsweb</artifactId>
             <version>${project.parent.version}</version>
             <type>war</type>
@@ -128,6 +133,11 @@
             <groupId>org.egov</groupId>
             <artifactId>egov-egf</artifactId>
             <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.egov</groupId>
+            <artifactId>egov-audit</artifactId>
+          <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.egov</groupId>
@@ -208,6 +218,11 @@
                             <contextRoot>/services/lcms</contextRoot>
                         </webModule>
                  	      <webModule>
+                            <groupId>org.egov</groupId>
+			    <artifactId>egov-auditweb</artifactId>
+                            <contextRoot>/services/audit</contextRoot>
+                 	    </webModule>
+                 	    <webModule>
                             <groupId>org.egov</groupId>
                             <artifactId>egov-collectionweb</artifactId>
                             <contextRoot>/services/collection</contextRoot>
