--- a/egov/pom.xml
+++ b/egov/pom.xml
@@ -257,12 +257,14 @@
         <module>egov-commons</module>
         <module>egov-eis</module>
         <module>egov-egf</module>
+        <module>egov-audit</module>
         <module>egov-lcms</module>
         <module>egov-collection</module>
         <module>egov-commonsweb</module>
         <module>egov-eisweb</module>
         <module>egov-egiweb</module>
         <module>egov-egfweb</module>
+        <module>egov-auditweb</module>
         <module>egov-lcmsweb</module>
         <module>egov-collectionweb</module>
         <module>egov-ear</module>
