--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/report/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/report/package.properties
@@ -52,6 +52,8 @@ report.budget.type = Budget Type
 consolidate.budget.report = Consolidated Budget Report
 report.department = Department
 report.asOnDate = As On Date
+report.fromDate = From Date
+report.toDate = To Date
 report.function = Function
 report.functionary = Functionary
 report.fund = Fund
