Apni mandi changes

--- a/egov/egov-apnimandiweb/src/main/resources/messages/errors.properties
+++ b/egov/egov-apnimandiweb/src/main/resources/messages/errors.properties
@@ -1,5 +1,5 @@
 todate.less.fromdate=To date can't be before from date
-contractor.already.exist=Unable to add this contractor because following contractor(s) already existed in the system within this given time period and zone
+apnimandiContractor.already.exist=Unable to add this contractor because following contractor(s) already existed in the system within this given time period and zone
 collection.already.exist=Unable to add this collection detail because one collection detail already existed in the system within this given time period and zone
 account.head.empty=Please enter at least one amount details
 terminatedate.less.fromdate=Terminated date can't be before from date
