--- a/egov/egov-apnimandiweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-apnimandiweb/src/main/resources/messages/labels.properties
@@ -70,14 +70,15 @@ title.contractor.result=View Contractor
 title.contractor.search=Search Contractor
 title.contractor.terminate=Terminate Contractor
 
-lbl.contractor.details=Contractor Details
+lbl.contractor.details=Day Market Contractor Details
 lbl.contract.signed.on=Contract signed on
 lbl.aadhaar.no=Aadhaar no.
 lbl.valid.from.date=Valid from date
 lbl.valid.to.date=Valid to date
 lbl.zone=Zone
-lbl.no.of.max.allowed.vendors=No. of max allowed vendors
-lbl.rent.amount.per.day=Rent Amount per day
+lbl.site=Site
+lbl.no.of.max.allowed.vendors=No of Lots/Vendors
+lbl.rent.amount.per.day=Rent Amount per day market
 lbl.security.fees=Security fees
 lbl.due.day.of.collection.for.every.month=Due day of Collection for every month
 lbl.penalty.amount.per.day=Penalty Amount per day
@@ -122,7 +123,7 @@ lbl.account.head=Account Head
 lbl.amount=Amount (Rs.)
 lbl.total=Total
 lbl.collection.search.result=Collection Search Result
-lbl.collection.details=Collection Details
+lbl.collection.details=Day Market & Apni Mandi Collection Details
 
 lbl.wfhistory=Workflow History
 lbl.date=Date
