LCMS UAT review implemented

--- a/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
@@ -97,6 +97,8 @@ lbl.petitiontype=Petition Type
 lbl.casenumber=Case Number
 lbl.courttype=Type of Court
 lbl.petitiontype=Petition Type
+lbl.reappl.courttype=Re appeal case Court type
+lbl.reappl.petitiontype=Re appeal case Petition Type
 lbl.casedate=Case Filing Date
 lbl.court=Court Name
 
@@ -113,13 +115,16 @@ lbl.fieldbycarp=Filed by ULB
 lbl.createlegal=Legal Information
 lbl.orderNumber=Order Number
 title.legalCase.view=View Legal case
-lbl.casecatagory=Case Type
+lbl.casecatagory=Case Regarding
 title.createCaseType=Case Type
 title.standingCouncil=Add/Edit StandingCounsel
 lbl.reappealofcase=Is Re appeal of Case
 lbl.nodalofficer=Nodal Officer
-lbl.nodalofficer.department=Nodal Officer Department
-lbl.estimatepreparedby=Estimate Prepared By
+lbl.nodalofficer.department=Concerned Department
+lbl.estimatepreparedby=Case Entered by
+
+lbl.concerned.branch=Concerned Branch
+lbl.concerned.branch.email=Email Id of Concerned Branch
 
 title.judgmenttype.new=Create Judgment Type
 title.judgmenttype.view=View Judgment Type
