CR item changes 21082020

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -390,4 +390,6 @@ msg.please.select.voucher.narration=Please enter narration
 msg.payment.narration.mandatory=Narration is mandatory
 
 bank.onlinelink=Online Link
+payment.firstsignatory=First Signatory
+payment.secondsignatory=Second Signatory
 
