--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
@@ -368,3 +368,5 @@ msg.please.select.approver=Please Select the Approver
 msg.please.enter.voucher.narration=Please enter Narration
 msg.please.select.voucher.narration=Please enter narration
 lbl.pending.with=Pending With
+budget.link=Budget Details
+msg.expense.bill.saveasdraft.success=Voucher {0} save as draft successfully
