--- a/egov/egov-egfweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/labels.properties
@@ -547,3 +547,5 @@ title.approvebudget.search.acmc=Verify Uploaded Budget
 lbl.bill.sanction.number=Sanction Number
 lbl.bill.sanction.date=Sanction Date
 lbl.view.documents=Documents
+lbl.subledgeraccount.code=Code
+lbl.subledgercode=Account Code
