--- a/egov/egov-egfweb/src/main/resources/messages/message.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/message.properties
@@ -134,3 +134,4 @@ msg.type.first.3.letters.of.account.code=Type first 3 letters of Account code
 msg.no.documents=No Documents Attached
 msg.uploaded.budget.cao.success = Uploaded budget verified and sent to Additional Commissioner for further verification 
 msg.uploaded.budget.acmc.success = Uploaded budget verified and sent to Commissioner for Approval
+msg.expense.bill.saveasdraft.success=Expense bill {0} save as draft successfully
