Finance Issue Fix

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -388,6 +388,9 @@ pex=PEX
 pex.transaction.success=Processing done successfully
 msg.please.select.voucher.narration=Please enter narration
 msg.payment.narration.mandatory=Narration is mandatory
-bank.onlinelink=Online Link
 
+bank.onlinelink=Online Link
+payment.firstsignatory=First Signatory
+payment.secondsignatory=Second Signatory
+payment.budgetDetails=Budget Details
 
