Finance CR changes

--- a/egov/egov-egfweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/labels.properties
@@ -549,3 +549,5 @@ lbl.bill.sanction.date=Sanction Date
 lbl.view.documents=Documents
 lbl.subledgeraccount.code=Code
 lbl.subledgercode=Account Code
+lbl.budget.details=Budget Details
+
