--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -392,4 +392,5 @@ msg.payment.narration.mandatory=Narration is mandatory
 bank.onlinelink=Online Link
 payment.firstsignatory=First Signatory
 payment.secondsignatory=Second Signatory
+payment.budgetDetails=Budget Details
 
