apni mandi related changes

--- a/egov/egov-apnimandiweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-apnimandiweb/src/main/resources/messages/labels.properties
@@ -75,7 +75,7 @@ title.estimated.income.report=Estimated income from Apni Mandi / Day Market
 
 lbl.contractor.details=Day Market Contractor Details
 lbl.contract.signed.on=Contract signed on
-lbl.aadhaar.no=Aadhaar no.
+lbl.aadhaar.no=Adhar no. (Last 4 digit only)
 lbl.valid.from.date=Valid from date
 lbl.valid.to.date=Valid to date
 lbl.from.date=From date
@@ -142,3 +142,7 @@ lbl.termination.remarks=Terminate Remarks
 lbl.amount.type=Amount Type
 lbl.collection.amount=Collection Amount
 lbl.collection.date=Collection date
+
+lbl.implementerdepartment=Implementer Department
+lbl.implementerdesignation=Implementer Designation
+lbl.implementer=Implementer
