--- a/egov/egov-apnimandiweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-apnimandiweb/src/main/resources/messages/labels.properties
@@ -88,7 +88,7 @@ lbl.security.fees=Security fees
 lbl.due.day.of.collection.for.every.month=Due day of Collection for every month
 lbl.penalty.amount.per.day=Penalty Amount per day
 lbl.contractor.share=Contractor % share
-lbl.terminate.contract=Terminate Contract
+lbl.terminate.contract=Terminate Contract / License
 lbl.comments=Comments
 lbl.attachments=Attachments
 lbl.contractor.search.result=Contractor Search Result
