Commiting Sneha's workspace

--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -355,3 +355,124 @@ lbl.refund.amount=Refund Amount
 lbl.withheld.amount=Withheld Amount(Rs)
 lbl.refundedsofar.amount = Amount refunded so far(Rs)
 lbl.dateofproposal=Date of proposal
+
+
+#BoQ Details
+title.boqDetails.create=Work Order/Agreement Creation
+lbl.name.work=Name of work
+lbl.estimate.number=Estimate/Works Number
+lbl.start.date=Work Order/Agreement Start Date
+lbl.intended.date=Work Order/Agreement Intended Date
+lbl.extended.date=Work Order/Agreement Extended Date
+lbl.executing.department=Executing Department of Estimate/ Works
+lbl.amount=Work Order/Agreement Amount
+lbl.work.details=Work Order/Agreement Details
+lbl.agreement.details=Agreement Details
+lbl.agreement.status=Work Order/Agreement Status
+lbl.status=Work Status
+lbl.name=Name
+lbl.code=Code
+lbl.adddress=Address
+lbl.phone=Phone No.
+lbl.email=Email
+lbl.item.description=Item Description
+lbl.ref.dsr=Ref Dsr
+lbl.unit=Unit
+lbl.rate=Rate
+lbl.quantity=Quantity
+lbl.amount=Amount
+lbl.action=Action
+lbl.save=Save Work Order/Agreement Creation
+lbl.upload=Upload
+
+#Tender Details
+title.tenderDetails.create=Tender/Procurement Creation
+lbl.tender.amount=Tender/Procurement Amount
+lbl.tender.date=Tender/Procurement Date
+lbl.tender.vendor.details=Vendor/Contractor Details
+lbl.tender.loa.number=WO/LOA Number
+lbl.save.tender=Save Tender Details
+
+
+#Bg security
+title.bg.security.create=Bg Security Creation
+lbl.bg.security.validity=BG/Security validity
+lbl.bg.security.amount=BG/Security Amount
+lbl.bg.security.start.date=BG/Security Start Date
+lbl.bg.security.end.date=BG/Security End Date
+lbl.bg.security.loa.number=WO/LOA Number
+lbl.save.bg.security=Save Bg Security Creation
+
+#For search estimate screen
+title.work.estimate.create=For search estimate screen
+lbl.work.estimate.status=Work Estimate Status
+lbl.work.estimate.number=Work Estimate Number
+lbl.work.estimate.from.date=From Date
+lbl.work.estimate.to.date=To Date
+lbl.work.estimate.executing.department=Executing Department
+lbl.work.estimate.package.number=Works Package/ Estimate Number
+lbl.search.work.estimate=Search Estimate
+
+#Estimate Preparation & Approval
+title.estimate.preparation.create=Estimate Preparation & Approval
+lbl.estimate.preparation.works.wing=Works Wing 
+lbl.estimate.preparation.executing.division=Executing Division
+lbl.estimate.preparation.estimate.date=Estimate Date
+lbl.estimate.preparation.estimate.number=Estimate Number
+lbl.estimate.preparation.work.location=Work Location 
+lbl.estimate.preparation.sector.number=Sector Number 
+lbl.estimate.preparation.ward.number=Ward Number
+lbl.estimate.preparation.name.work=Name of Work
+lbl.estimate.preparation.work.category=Nature of Work/Work Category
+lbl.estimate.preparation.necessity=Necessity
+lbl.estimate.preparation.scope.work=Provision/Scope of work
+lbl.estimate.preparation.work.status=Work Status
+lbl.estimate.preparation.work.category=Work Category
+lbl.estimate.preparation.estimate.amount=Estimate Amount 
+lbl.estimate.preparation.estimate.prepared.by=Estimate Prepared by
+lbl.estimate.preparation.designation=Designation
+lbl.estimate.preparation.financing.details=Financing Details (Head of Account (HOA) and others)
+lbl.estimate.preparation.fund.source=Fund Source
+lbl.estimate.preparation.financial.year=Financial Year 
+lbl.estimate.preparation.estimate.percentage=Estimate Percentage 
+lbl.estimate.preparation.save=Save Estimate Preparation & Approval
+lbl.estimate.preparation.approver=Approver
+lbl.estimate.preparation.approver.department=Approver Department
+lbl.estimate.preparation.approver.designation=Approver Designation
+lbl.estimate.preparation.comments=Comments
+
+#MIS/Dashboard Requirement: Estimate Details Search
+title.estimate.search.create=MIS/Dashboard Requirement: Estimate Details Search
+lbl.estimate.search.status=Status 
+lbl.estimate.search.category=Category
+lbl.estimate.search.department=Department
+lbl.estimate.search.work.name=Work Name
+lbl.estimate.search.work.type=Work Type
+lbl.estimate.search.work.location=Work Location 
+lbl.estimate.search.sector.number=Sector Number 
+lbl.estimate.search.ward.number=Ward Number
+lbl.estimate.search.fund=Fund
+lbl.estimate.search.estimated.cost=Estimated Cost
+lbl.estimate.search.tendered.cost=Tendered Cost
+lbl.estimate.search.agency.work.order=Agency Work Order
+lbl.estimate.search.date=Date
+lbl.estimate.search.time.limit=Time Limit
+
+
+#MIS/Dashboard Requirement: Work order/Agreement Search
+title.work.order.search.create=MIS/Dashboard Requirement: Work order/Agreement Search
+lbl.work.order.search.status=Status 
+lbl.work.order.search.head=Head
+lbl.work.order.search.category=Category
+lbl.work.order.search.department=Department
+lbl.work.order.search.work.name=Work Name
+lbl.work.order.search.work.type=Work Type
+lbl.work.order.search.work.location=Work Location 
+lbl.work.order.search.sector.number=Sector Number 
+lbl.work.order.search.ward.number=Ward Number
+lbl.work.order.search.fund=Fund
+lbl.work.order.search.estimated.cost=Estimated Cost
+lbl.work.order.search.tendered.cost=Tendered Cost
+lbl.work.order.search.agency.work.order=Agency Work Order
+lbl.work.order.search.date=Date
+lbl.work.order.search.time.limit=Time Limit
