issue fix in agenda

--- a/egov/egov-councilweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-councilweb/src/main/resources/messages/labels.properties
@@ -152,6 +152,7 @@ lbl.agenda.number=Agenda Number
 lbl.department=Department
 lbl.preamble.number=Agenda Number
 lbl.committeetype= Committee type
+lbl.agendatype= Agenda type
 lbl.status=Status
 lbl.addpreamble=Add Agenda
 title.common.error.page=Council Management
@@ -257,3 +258,5 @@ lbl.router.update=Update
 lbl.preamble.referencenumber=Reference Number
 lbl.percentage=Percentage
 lbl.bidders=Bidders
+
+lbl.meeting.document=Meeting Document
