--- a/egov/egov-council/src/main/resources/messages/service-message-council.properties
+++ b/egov/egov-council/src/main/resources/messages/service-message-council.properties
@@ -48,16 +48,16 @@
 
 // sms and email
 
-msg.meeting.sms=Dear {0} Members, Committee Meeting scheduled on {1} at {2} at {3}. {4}  Agenda sent to your email.
+msg.meeting.sms=Dear {0} Members, Committee Meeting scheduled on {1} at {2} at {3}. {4} Agenda sent to your email.
 email.meeting.subject={0} Members, Committee Meeting scheduled on {1} at {2} at {3}
 email.meeting.body=Dear {0} Members, Committee Meeting scheduled on {1} at {2} at {3}.{4}, Please find the agenda of the meeting attached with this email.
 msg.resolution.sms=Dear {0} Members, MOM has been finalized and Resolution number has been generated.Resolution details sent to your mail.
-email.resolution.body=Dear {0} Members, MOM has been finalized and Resolution number has been generated. Please find the resolution details attached wwith this mail.
+email.resolution.body=Dear {0} Members, MOM has been finalized and Resolution number has been generated. Please find the MOM details attached with this mail.
 email.resolution.subject=Dear {0} Members, MOM has been finalized and Resolution number has been generated.
-msg.council.roles.meeting.sms=Dear {0}, Committee Meeting scheduled on {1} at {2} at {3}. {4}  Agenda sent to your email.
+msg.council.roles.meeting.sms=Dear {0}, Committee Meeting scheduled on {1} at {2} at {3}. {4}, Agenda sent to your email.
 email.council.roles.meeting.subject={0}, Committee Meeting scheduled on {1} at {2} at {3}
-email.council.roles.meeting.body=Dear {0}, Committee Meeting scheduled on {1} at {2} at {3}.{4}, Please find the agenda of the meeting attached with this email.
+email.council.roles.meeting.body=Dear {0}, Committee Meeting scheduled on {1} at {2} at {3}. {4}, Please find the agenda of the meeting attached with this email.
 msg.council.roles.resolution.sms=Dear {0}, MOM has been finalized and Resolution number has been generated.Resolution details sent to your mail.
-email.council.roles.resolution.body=Dear {0}, MOM has been finalized and Resolution number has been generated. Please find the resolution details attached wwith this mail.
+email.council.roles.resolution.body=Dear {0}, MOM has been finalized and Resolution number has been generated. Please find the resolution details attached with this mail.
 email.council.roles.resolution.subject=Dear {0}, MOM has been finalized and Resolution number has been generated.
 appms.endpoint.url=http://125.99.73.122:8090/SEPL.PWIMS.WEBAPI.Services/ProposalDetails/CouncilResponse
