--- a/egov/egov-auditweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-auditweb/src/main/resources/messages/labels.properties
@@ -82,11 +82,5 @@ lbl.voucher=Bill Voucher Number
 lbl.payment.voucher=Payment Voucher Number
 lbl.audit.dateFrom=Audit Date From
 lbl.audit.dateTo=Audit Date To
-lbl.department=Department
-
-
-
-
-
-
-
+lbl.checklist.date=Checklist Date
+lbl.auditor=Auditor
