Apnimandi and LCMS related changes

--- a/egov/egov-apnimandiweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-apnimandiweb/src/main/resources/messages/labels.properties
@@ -69,12 +69,17 @@ title.contractor.edit=Edit Contractor
 title.contractor.result=View Contractor
 title.contractor.search=Search Contractor
 title.contractor.terminate=Terminate Contractor
+title.dm.contractor.report.date=Day Market contractor allocation details for a date range
+title.dm.contractor.report.zone=Day Market contractor allocation history for a zone
+title.estimated.income.report=Estimated income from Apni Mandi / Day Market
 
 lbl.contractor.details=Day Market Contractor Details
 lbl.contract.signed.on=Contract signed on
-lbl.aadhaar.no=Aadhaar no.
+lbl.aadhaar.no=Adhar no. (Last 4 digit only)
 lbl.valid.from.date=Valid from date
 lbl.valid.to.date=Valid to date
+lbl.from.date=From date
+lbl.to.date=To date
 lbl.zone=Zone
 lbl.site=Site
 lbl.no.of.max.allowed.vendors=No of Lots/Vendors
@@ -83,7 +88,7 @@ lbl.security.fees=Security fees
 lbl.due.day.of.collection.for.every.month=Due day of Collection for every month
 lbl.penalty.amount.per.day=Penalty Amount per day
 lbl.contractor.share=Contractor % share
-lbl.terminate.contract=Terminate Contract
+lbl.terminate.contract=Terminate Contract / License
 lbl.comments=Comments
 lbl.attachments=Attachments
 lbl.contractor.search.result=Contractor Search Result
@@ -104,6 +109,8 @@ title.apnimandicollection.view=View Collection
 title.apnimandicollection.edit=Edit Collection
 title.apnimandicollection.result=View Collection
 title.apnimandicollection.search=Search Collection
+title.dm.collection.report=Day Market Collection for a date range
+title.am.collection.report=Apni Mandi collection for a date range
 
 lbl.payment.details=Payment Details
 lbl.total.amount.received=Total Amount Received
@@ -129,7 +136,13 @@ lbl.wfhistory=Workflow History
 lbl.date=Date
 lbl.updatedby=Updated By
 lbl.currentowner=Current Owner
-
 lbl.termination.details=Termination Details
 lbl.termination.on=Terminate On
 lbl.termination.remarks=Terminate Remarks
+lbl.amount.type=Amount Type
+lbl.collection.amount=Collection Amount
+lbl.collection.date=Collection date
+
+lbl.implementerdepartment=Implementer Department
+lbl.implementerdesignation=Implementer Designation
+lbl.implementer=Implementer
