SNeha changes in Works

--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -476,3 +476,7 @@ lbl.work.order.search.tendered.cost=Tendered Cost
 lbl.work.order.search.agency.work.order=Agency Work Order
 lbl.work.order.search.date=Date
 lbl.work.order.search.time.limit=Time Limit
+
+title.estimate.search=Search Estimate
+title.estimate.view=View Estimate
+title.estimate.edit=Edit Estimate
