agenda invitation functionality developed

--- a/egov/egov-council/src/main/resources/messages/service-message-council.properties
+++ b/egov/egov-council/src/main/resources/messages/service-message-council.properties
@@ -61,3 +61,4 @@ msg.council.roles.resolution.sms=Dear {0}, MOM has been finalized and Resolution
 email.council.roles.resolution.body=Dear {0}, MOM has been finalized and Resolution number has been generated. Please find the resolution details attached with this mail.
 email.council.roles.resolution.subject=Dear {0}, MOM has been finalized and Resolution number has been generated.
 appms.endpoint.url=http://125.99.73.122:8090/SEPL.PWIMS.WEBAPI.Services/ProposalDetails/CouncilResponse
+email.council.agenda.invitation.subject=Requested to send agenda items for inclusion in the meeting
