--- a/egov/egov-councilweb/src/main/resources/messages/errors.properties
+++ b/egov/egov-councilweb/src/main/resources/messages/errors.properties
@@ -77,6 +77,7 @@ validate.committee.members = Please select atleast one committee member into com
 notempty.preamble.department = Please Select Department
 notempty.preamble.gistOfPreamble = Gist Of Preamble must contain value
 notempty.preamble.attachments = Please upload document
+notempty.meeting.meetingNumber = Meeting Number must contain value
 notempty.meeting.meetingDate = Meeting Date must contain value
 notempty.meeting.meetingTime = Meeting Time must contain value
 notempty.meeting.committeeType = Committee Type must contain value
