--- a/egov/egov-councilweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-councilweb/src/main/resources/messages/labels.properties
@@ -260,3 +260,8 @@ lbl.percentage=Percentage
 lbl.bidders=Bidders
 
 lbl.meeting.document=Meeting Document
+lbl.agenda.invitation.message=Notification Message
+lbl.agenda.invitation=Send Agenda Invitation Notification
+lbl.send=Send
+title.agenda.invitation=Send Agenda Invitation Notification
+title.agenda.invitation.result=Result Agenda Invitation Notification
