--- a/egov/egov-councilweb/src/main/resources/messages/message.properties
+++ b/egov/egov-councilweb/src/main/resources/messages/message.properties
@@ -60,6 +60,7 @@ msg.councilPreamble.moreInfo= Agenda number {0} is forwarded back successfully f
 msg.councilCommitteeType.success=Committee details saved successfully.
 msg.councilPreamble.update=Implementation status saved successfully.
 msg.councilPreamble.alreadyfinished=Agenda already finished.
+msg.councilagenda.invitation.success=Notification sent successfully.
 
 msg.no.attach.found= No Photo Attachment Found
 msg.invalid.agenda.details=Invalid request. Agenda details are not present.
