--- a/egov/egov-councilweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-councilweb/src/main/resources/messages/labels.properties
@@ -152,6 +152,7 @@ lbl.agenda.number=Agenda Number
 lbl.department=Department
 lbl.preamble.number=Agenda Number
 lbl.committeetype= Committee type
+lbl.agendatype= Agenda type
 lbl.status=Status
 lbl.addpreamble=Add Agenda
 title.common.error.page=Council Management
@@ -211,14 +212,14 @@ title.agenda.search.result=Agenda Search Result
 lbl.attendence.Detail=Attendence details not entered
 
 title.preamble.report=Agenda Report
-lbl.mesg.document=Document size should not exceed 2 MB
+lbl.mesg.document=Document size should not exceed 10 MB
 
 lbl.pramble.wardwise.report.title=Agenda Report
 lbl.dateofcreation=Date Of Creation
 lbl.used.in.agenda=Used in agenda(Y/N)
 label.attendance=Attendance
 label.attendance.result.title=Council Committee Members Attendance Status
-lbl.mesg.upload.size=Upload size should not exceed 2 MB
+lbl.mesg.upload.size=Upload size should not exceed 10 MB
 title.councilmom = Create MOM
 title.councilmom.attendance= Update Attendance
 lbl.finalize.attendance=Finalize Attendance
@@ -257,3 +258,10 @@ lbl.router.update=Update
 lbl.preamble.referencenumber=Reference Number
 lbl.percentage=Percentage
 lbl.bidders=Bidders
+
+lbl.meeting.document=Meeting Document
+lbl.agenda.invitation.message=Notification Message
+lbl.agenda.invitation=Send Agenda Invitation Notification
+lbl.send=Send
+title.agenda.invitation=Send Agenda Invitation Notification
+title.agenda.invitation.result=Result Agenda Invitation Notification
