Misc Receipt Issue Fix

--- a/egov/egov-collection/src/main/java/org/egov/collection/package.properties
+++ b/egov/egov-collection/src/main/java/org/egov/collection/package.properties
@@ -806,3 +806,4 @@ branchuser.master.bank.error=Please select Bank
 branchuser.master.branch.error=Please select Branch
 branchuser.master.user.error=Please select User
 branchuser.master.view.title= View Bank Branch To User Map
+lbl.remit.to.bank=Remit To Bank
