Finance and Works issue fix

--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -392,6 +392,7 @@ lbl.tender.date=Tender/Procurement Date
 lbl.tender.vendor.details=Vendor/Contractor Details
 lbl.tender.loa.number=WO/LOA Number
 lbl.save.tender=Save Tender Details
+lbl.search.tender=Search Tender Details
 
 
 #Bg security
@@ -402,6 +403,7 @@ lbl.bg.security.start.date=BG/Security Start Date
 lbl.bg.security.end.date=BG/Security End Date
 lbl.bg.security.loa.number=WO/LOA Number
 lbl.save.bg.security=Save Bg Security Creation
+lbl.search.bg.security=Search Bg Security Creation
 
 #For search estimate screen
 title.work.estimate.create=For search estimate screen
