Works issue fix

--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -480,3 +480,6 @@ lbl.work.order.search.time.limit=Time Limit
 title.estimate.search=Search Estimate
 title.estimate.view=View Estimate
 title.estimate.edit=Edit Estimate
+title.estimate.administration.approval=Administration Approval
+
+title.tender.view=View Tender
