--- a/egov/egov-auditweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-auditweb/src/main/resources/messages/labels.properties
@@ -64,7 +64,7 @@ lbl.view.status=Status
 lbl.department=Department
 lbl.comments=Comments
 lbl.nohistorydetails.code=No History Details
-lbl.expType=Expenditure Type
+lbl.expType=Type
 lbl.dateFrom=Bill Date From
 lbl.dateTo=Bill Date To
 lbl.selectAll=Select All
