--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
@@ -372,3 +372,4 @@ budget.link=Budget Details
 msg.expense.bill.saveasdraft.success=Voucher {0} save as draft successfully
 payment.firstsignatory=First Signatory
 payment.secondsignatory=Second Signatory
+ voucherRemoved.succesful=Voucher Removed Successfully.
