--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -377,13 +377,17 @@ lbl.phone=Phone No.
 lbl.email=Email
 lbl.item.description=Item Description
 lbl.ref.dsr=Ref Dsr
-lbl.unit=Unit
+lbl.unit=UOM
 lbl.rate=Rate
 lbl.quantity=Quantity
 lbl.amount=Amount
 lbl.action=Action
 lbl.save=Save Work Order/Agreement Creation
 lbl.upload=Upload
+lbl.work.view=View Work Order/Agreement Creation
+lbl.work.search=Search Work Order/Agreement Creation
+lbl.work.edit=Edit Work Order/Agreement Creation
+lbl.work.closure=Work Order/Agreement Closure
 
 #Tender Details
 title.tenderDetails.create=Tender/Procurement Creation
@@ -392,6 +396,7 @@ lbl.tender.date=Tender/Procurement Date
 lbl.tender.vendor.details=Vendor/Contractor Details
 lbl.tender.loa.number=WO/LOA Number
 lbl.save.tender=Save Tender Details
+lbl.search.tender=Search Tender Details
 
 
 #Bg security
@@ -402,6 +407,7 @@ lbl.bg.security.start.date=BG/Security Start Date
 lbl.bg.security.end.date=BG/Security End Date
 lbl.bg.security.loa.number=WO/LOA Number
 lbl.save.bg.security=Save Bg Security Creation
+lbl.search.bg.security=Search Bg Security Creation
 
 #For search estimate screen
 title.work.estimate.create=For search estimate screen
