Works code merge

--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -388,6 +388,9 @@ lbl.work.view=View Work Order/Agreement Creation
 lbl.work.search=Search Work Order/Agreement Creation
 lbl.work.edit=Edit Work Order/Agreement Creation
 lbl.work.closure=Work Order/Agreement Closure
+lbl.work.boq=BoQ Document
+lbl.work.contractor.details=Contractor Details
+lbl.work.closure=Closure
 
 #Tender Details
 title.tenderDetails.create=Tender/Procurement Creation
@@ -489,3 +492,5 @@ title.estimate.edit=Edit Estimate
 title.estimate.administration.approval=Administration Approval
 
 title.tender.view=View Tender
+lbl.contractor=Contractor Details
+lbl.boq.section=BOQ Section
