--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -388,7 +388,7 @@ lbl.work.view=View Work Order/Agreement Creation
 lbl.work.search=Search Work Order/Agreement Creation
 lbl.work.edit=Edit Work Order/Agreement Creation
 lbl.work.closure=Work Order/Agreement Closure
-lbl.work.boq=BoQ Document
+lbl.work.boq=BoQ Details
 lbl.work.contractor.details=Contractor Details
 lbl.work.closure=Closure
 
@@ -423,7 +423,7 @@ lbl.work.estimate.package.number=Works Package/ Estimate Number
 lbl.search.work.estimate=Search Estimate
 
 #Estimate Preparation & Approval
-title.estimate.preparation.create=Estimate Preparation & Approval
+title.estimate.preparation.create=Estimate Details
 lbl.estimate.preparation.works.wing=Works Wing 
 lbl.estimate.preparation.executing.division=Executing Division
 lbl.estimate.preparation.estimate.date=Estimate Date
@@ -440,7 +440,7 @@ lbl.estimate.preparation.work.category=Work Category
 lbl.estimate.preparation.estimate.amount=Estimate Amount 
 lbl.estimate.preparation.estimate.prepared.by=Estimate Prepared by
 lbl.estimate.preparation.designation=Designation
-lbl.estimate.preparation.financing.details=Financing Details (Head of Account (HOA) and others)
+lbl.estimate.preparation.financing.details=Head of Account (HOA)
 lbl.estimate.preparation.fund.source=Fund Source
 lbl.estimate.preparation.financial.year=Financial Year 
 lbl.estimate.preparation.estimate.percentage=Estimate Percentage 
@@ -481,7 +481,7 @@ lbl.work.order.search.sector.number=Sector Number
 lbl.work.order.search.ward.number=Ward Number
 lbl.work.order.search.fund=Fund
 lbl.work.order.search.estimated.cost=Estimated Cost
-lbl.work.order.search.tendered.cost=Tendered Cost
+lbl.work.order.search.tendered.cost=Estimate Amount
 lbl.work.order.search.agency.work.order=Agency Work Order
 lbl.work.order.search.date=Date
 lbl.work.order.search.time.limit=Time Limit
