Works and Finance

--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -360,13 +360,13 @@ lbl.dateofproposal=Date of proposal
 #BoQ Details
 title.boqDetails.create=Work Order/Agreement Creation
 lbl.name.work=Name of work
-lbl.estimate.number=Estimate/Works Number
+lbl.estimate.number=Estimate Number
 lbl.start.date=Work Order/Agreement Start Date
-lbl.intended.date=Work Order/Agreement Intended Date
+lbl.intended.date=Work Order/Agreement Intended End Date
 lbl.extended.date=Work Order/Agreement Extended Date
 lbl.executing.department=Executing Department of Estimate/ Works
-lbl.amount=Work Order/Agreement Amount
-lbl.work.details=Work Order/Agreement Details
+lbl.amount.wrk=Work Order/Agreement Amount
+lbl.work.details=WO/LOA Number
 lbl.agreement.details=Agreement Details
 lbl.agreement.status=Work Order/Agreement Status
 lbl.status=Work Status
@@ -397,14 +397,14 @@ title.tenderDetails.create=Tender/Procurement Creation
 lbl.tender.amount=Tender/Procurement Amount
 lbl.tender.date=Tender/Procurement Date
 lbl.tender.vendor.details=Vendor/Contractor Details
-lbl.tender.loa.number=WO/LOA Number
+lbl.tender.loa.number=Tender/Procurement Number
 lbl.save.tender=Save Tender Details
 lbl.search.tender=Search Tender Details
 
 
 #Bg security
 title.bg.security.create=Bg Security Creation
-lbl.bg.security.validity=BG/Security validity
+lbl.bg.security.validity=BG/Security validity(Days)
 lbl.bg.security.amount=BG/Security Amount
 lbl.bg.security.start.date=BG/Security Start Date
 lbl.bg.security.end.date=BG/Security End Date
@@ -496,3 +496,12 @@ lbl.contractor=Contractor Details
 lbl.boq.section=BOQ Section
 lbl.estimate.preparation.estimate.aanumber= AA Number
 lbl.estimate.preparation.estimate.aadate= AA Date
+lbl.tender.file=File Download
+lbl.tender.pro.number=WO/LOA Number
+lbl.bg.security.number= BG/Security No.
+
+lbl.estimate.work.number=Work Agreement Number
+lbl.works.status=Status
+
+lbl.work.order.project.closure.comments=Project Closure Comments
+lbl.work.order.contractor.comments=Contractor Performance Comments
