--- a/egov/egov-worksweb/src/main/resources/messages/message.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/message.properties
@@ -95,3 +95,6 @@ msg.milestone.cancel.success=Milestone cancelled successfully for the estimate n
 msg.cancel.lineestimate.conform=This estimate and all associated estimate(s) ,WIN code(s), administrative sanction and technical sanction will be removed from the system on cancel, please confirm if you want to continue?
 lineestimate.cancel.success=Estimate with estimate number {0} is cancelled successfully
 msg.images.notuploaded=Images not uploaded yet!
+msg.tender.success=Tender details have been successfully saved
+msg.bg.success=BG details have been successfully saved
+lbl.tender.file=File Download
