--- a/egov/egov-egi/src/main/resources/config/application-config.properties
+++ b/egov/egov-egi/src/main/resources/config/application-config.properties
@@ -410,6 +410,8 @@ egov.services.collection.service.receipt.update=collection-services/receipts/_up
 egov.services.collection.service.payment.search=collection-services/payments/_search
 egov.services.collection.service.payment.workflow=collection-services/payments/_workflow
 egov.services.collection.service.payment.create=collection-services/payments/_create
+egov.services.collection.service.remittance.depositworkurl=collection-services/remittances/_getdepositWork
+ 
 
 egov.services.egf.master.financialstatuses.search=egf-master/financialstatuses/_search
 
