Works and FinanceReceipts

--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -505,3 +505,8 @@ lbl.works.status=Status
 
 lbl.work.order.project.closure.comments=Project Closure Comments
 lbl.work.order.contractor.comments=Contractor Performance Comments
+
+lbl.measure.quantity=Measured Quantity
+lbl.measure.amount=Measured Amount
+
+lbl.works.completion= Project Completion(%)
