--- a/egov/egov-collectionweb/src/main/java/org/egov/collection/web/actions/receipts/package.properties
+++ b/egov/egov-collectionweb/src/main/java/org/egov/collection/web/actions/receipts/package.properties
@@ -115,7 +115,9 @@ billreceipt.payment.transactionnumber=Transaction Number
 billreceipt.payment.reenter.transactionnumber=  Re-enter Transaction Number 
 billreceipt.payement.amounttobecollected=Amount to be Collected
 billreceipt.payement.actualamountcollected=Amount Received
-billreceipt.payement.confirmatiommessage=Receipts Created Successfully
+billreceipt.payement.confirmatiommessage=Receipts Cancelled Successfully
+billreceipt.already.confirmatiommessage=Receipts Already Cancelled
+billreceipt.noaccess.confirmatiommessage=User cannot cancel past dated receipts
 billreceipt.billnumber.confirmation=Bill Number
 billreceipt.receiptnumber.confirmation=Receipt Number
 billreceipt.receiptdate.confirmation=Receipt Date
@@ -134,6 +136,7 @@ error.onlinereceipt.cancellation=Online receipt cannot be Cancelled
 error.remittedreceipt.cancellation=Receipt with Status as Remitted/Partial Remitted cannot be Cancelled
 cancellationreason.error=Reason for Cancellation is required
 error.norecordselected=No Record Selected
+error.nocancelselected=Only one Receipt can be cancelled at at time
 error.selectedcancelledreceiptserror=Selected Receipt(s) is already Cancelled. Please reselect
 billreceipt.mutipleinstrumenttypeerror.errormessage=Amount entered for more than one Mode of Payment is not allowed. Please reenter.
 billreceipt.datelessthan6monthdate.errormessage=DD/Cheque Date should be less than and within 6 months of the  Manual Receipt date.
@@ -492,3 +495,6 @@ lbl.remit.to.bank=Remit To Bank
 
 msg.collected.amount.is.more.than.amount.to.be.paid.do.you.want.to.collect.advance.amount=Collected amount is more than the amount to be paid. Do you want to collect advance amount?
 msg.please.enter.either.financial.year.or.fromDate.and.toDate=Please enter either financial year or from date and to date
+
+misc.receipt.sub.divison=Sub Divison
+misc.receipt.gst.no=GST Number
