Works and Finance changes

--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -376,7 +376,7 @@ lbl.adddress=Address
 lbl.phone=Phone No.
 lbl.email=Email
 lbl.item.description=Item Description
-lbl.ref.dsr=Ref Dsr
+lbl.ref.dsr=Ref DSR/NS
 lbl.unit=UOM
 lbl.rate=Rate
 lbl.quantity=Quantity
@@ -429,7 +429,7 @@ lbl.estimate.preparation.executing.division=Executing Division
 lbl.estimate.preparation.estimate.date=Estimate Date
 lbl.estimate.preparation.estimate.number=Estimate Number
 lbl.estimate.preparation.work.location=Work Location 
-lbl.estimate.preparation.sector.number=Sector Number 
+lbl.estimate.preparation.sector.number=Sector/Locality
 lbl.estimate.preparation.ward.number=Ward Number
 lbl.estimate.preparation.name.work=Name of Work
 lbl.estimate.preparation.work.category=Nature of Work/Work Category
@@ -510,3 +510,28 @@ lbl.measure.quantity=Measured Quantity
 lbl.measure.amount=Measured Amount
 
 lbl.works.completion= Project Completion(%)
+
+lbl.estimate.preparation.estimate.Contingency.Percentage=Contingent Percentage(%)
+lbl.estimate.preparation.estimate.Contingency.amount=Contingent Amount
+lbl.estimate.preparation.estimate.Consultancy.fee=Consultancy Fee
+lbl.estimate.preparation.estimate.Unforeseen.charges=Unforeseen Charges
+lbl.item.Milestone=Scope/Milestone
+
+lbl.estimate.preparation.aa.exp.head=Expenditure Head
+lbl.estimate.preparation.aa.exp.cat=Expenditure Category
+lbl.estimate.preparation.aa.exp.sub.cat=Expenditure Sub-category/Chargeable
+lbl.estimate.preparation.aa.meeting.cat=Meeting Category
+lbl.estimate.preparation.aa.meeting.number=Meeting Number
+lbl.estimate.preparation.aa.meeting.date=Meeting Date
+
+lbl.estimate.preparation.dnit.date=DNIT Date
+lbl.estimate.preparation.dnit.amount=DNIT Amount
+lbl.estimate.preparation.dnit.prepared.by=DNIT Prepared By
+lbl.estimate.preparation.dnit.number=DNIT Number
+
+lbl.aa.head=Expenditure Head
+lbl.estimate.preparation.work.estimateNumber= EstimateNumber
+lbl.tender.preparation.name.work=Project Name
+lbl.bg.tender.number=Tender Number
+lbl.tender.preparation.naration=Narration/Remarks
+title.dnit.preparation.create=Dnit Details
