Finance and works changes

--- a/egov/egov-egfweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/labels.properties
@@ -265,8 +265,8 @@ lbl.party.billnumber=Party Bill Number
 lbl.party.billdate=Party Bill Date
 lbl.end.billdate=Last Date of Bill Payment
 lbl.party.bill.amount=Party Bill Amount
-lbl.billsubtype=Bill Subtype 
-lbl.billtype=Bill Type
+lbl.billsubtype=Bill Type 
+lbl.billtype=Bill Sub-Type
 lbl.subledger.details=SubLedger Details
 lbl.payto=Pay To
 lbl.debit.details=Debit details
@@ -556,5 +556,6 @@ lbl.forward= Forward
 lbl.close=Close
 lbl.cancel=Cancel
 contractor.vigilance=Vigilance Case
-
+blacklisting.from.date=Blacklisting From Date
+blacklisting.to.date=Blacklisting To Date
 
