--- a/egov/egov-worksweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-worksweb/src/main/resources/messages/labels.properties
@@ -535,3 +535,15 @@ lbl.tender.preparation.name.work=Project Name
 lbl.bg.tender.number=Tender Number
 lbl.tender.preparation.naration=Narration/Remarks
 title.dnit.preparation.create=Dnit Details
+lbl.dnit.number=DNIT Number
+lbl.estimate.preparation.work.pending=pending with
+lbl.estimate.search.status=Status 
+lbl.estimate.search.work.name=Work Name
+lbl.work.dnit.from.date=DNIT From Date
+lbl.work.dnit.to.date=DNIT To Date
+lbl.actualstart.date=Work Order/Agreement Actual Start Date
+lbl.actualend.date= Work Order/Agreement Actual End Date
+lbl.estimate.dnit.number=Estimate/DNIT Number
+lbl.billsubtype.works=Bill Type
+
+
